Cannot scroll down in tool options. #62526

Closed
opened 2019-03-13 06:37:23 +01:00 by Todor Nikolov · 5 comments

System Information
Operating system: windows 10
Graphics card: geforce 1060

Blender Version
Broken: 2.80, bf9904ec80, blender2.8, 2019-03-13,
Worked: 2.79

Short description of error
When editing a tool with a lot of operators, (so that they take more then the fill height of the screen) you cannot scroll down. Thus you can't access all options.
image.png
Exact steps for others to reproduce the error
The Wall Builder from the Extras meshes is a good example of this.
Enable Add Mesh Extra Objects
Add>Mesh>Extras>Wall Factory
Try scrolling down to the bottom of the options.

**System Information** Operating system: windows 10 Graphics card: geforce 1060 **Blender Version** Broken: 2.80, bf9904ec8018, blender2.8, 2019-03-13, Worked: 2.79 **Short description of error** When editing a tool with a lot of operators, (so that they take more then the fill height of the screen) you cannot scroll down. Thus you can't access all options. ![image.png](https://archive.blender.org/developer/F6812967/image.png) **Exact steps for others to reproduce the error** The Wall Builder from the Extras meshes is a good example of this. Enable Add Mesh Extra Objects Add>Mesh>Extras>Wall Factory Try scrolling down to the bottom of the options.
Author

Added subscriber: @TodorNikolov

Added subscriber: @TodorNikolov
Campbell Barton self-assigned this 2019-03-13 08:44:25 +01:00

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

@ideasman42: one thing that would address this, is if we add the operator redo panel to the Tool Properties tab in Properties. The overlay panel in the viewport doesn’t work well for these mega-operators.

Of course, these kinds of operators will most likely go away when we have some form of parametric, procedural primitives in the future also.

@ideasman42: one thing that would address this, is if we add the operator redo panel to the Tool Properties tab in Properties. The overlay panel in the viewport doesn’t work well for these mega-operators. Of course, these kinds of operators will most likely go away when we have some form of parametric, procedural primitives in the future also.

This issue was referenced by 3a58e97aed

This issue was referenced by 3a58e97aed963b43984250e6ce40cd863b71e4b6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62526
No description provided.