Fix T62526: Can't scroll redo panel